syntax = "proto3";

package system;

message NTDeviceSign {
    string trace = 15;
    optional string uid = 16;
    optional Sign sign = 24;
}

message Sign {
    optional bytes SecSign = 1;
    optional string SecToken = 2;
    optional bytes SecExtra = 3;
}