syntax = "proto3";

package system;

message NTPacketUid {
    optional string uid = 16;
}